Fixing remote compilation